syntax = "proto3";
package TestV2RayGCon;

message GetStatsRequest {
  // Name of the stat counter.
  string name = 1;
  // Whether or not to reset the counter to fetching its value.
  bool reset = 2;
}

message Stat {
  string name = 1;
  int64 value = 2;
}

message GetStatsResponse {
  Stat stat = 1;
}

service StatsService {
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse) {}
}